--- a/2025-03-14-venice/src/style.css
+++ b/2025-03-14-venice/src/style.css
@@ -203,3 +203,9 @@ h6 {
 .rough-annotation > path[stroke-width='2'] {
   stroke-width: calc(2px * var(--slidev-slide-scale));
 }
+
+
+.large-code .slidev-code {
+  font-size: 24px !important;
+  line-height: 24px !important;
+}
